Add webfonts. Move some SCSS out of the main file.

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -1,44 +1,12 @@
 @import "bourbon";
-@import "helpers";
-@import "normalize";
 
-$black: #111;
-$white: #fcfcfc;
-$grey: #8c8c8c;
-$purple: #814AB5;
+@import "variables";
+@import "buttons";
+@import "helpers/nolist";
+@import "helpers/typescale";
 
-$basesize: 16px;
-@function typescale ($level: 1) {
-	$typescale: 1.414;
-	$mult: 1;
-
-	@if $level == 2 {
-		$mult: 1.414;  // 22
-	} @else if $level == 3 {
-		$mult: 1.999;  // 32
-	} @else if $level == 4 {
-		$mult: 2.827;  // 45
-	} @else if $level == 5 {
-		$mult: 3.998;  // 63
-	} @else if $level == 6 {
-		$mult: 5.653;  //90
-	}
-
-	@return $mult * $basesize;
-}
-
-@mixin btn {
-	color: $black;
-	border: .18em solid $black;
-	border-radius: .34em;
-	padding: .55em 1em;
-	text-decoration: none;
-
-	&:hover {
-		color: $purple;
-		border-color: $purple;
-	}
-}
+@import "helpers/normalize";
+@import "helpers/fonts";
 
 html {
 	background: $white;
