--- a/assets/src/scss/_buttons.scss
+++ b/assets/src/scss/_buttons.scss
@@ -2,6 +2,7 @@
 	color: $black;
 	border: .18em solid $black;
 	border-radius: .34em;
+	display: inline-block;
 	padding: .55em 1em;
 	text-decoration: none;
 
