--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -53,6 +53,48 @@ img {
 		font-size: typescale(2);
 	}
 
+	ul {
+		@include nolist;
+		background: #fff;
+		border: 1px solid #f6f6f6;
+		border-radius: 3px;
+		padding: 2em;
+		margin: 4em auto 0;
+		width: 300px;
+	}
+
+	li {
+		margin: 2em 0 0;
+
+		&:first-child {
+			margin: 0;
+		}
+	}
+
+	span {
+		display: block;
+	}
+
+	.product {
+		float: left;
+	}
+
+	.price {
+		color: $grey;
+		text-align: right;
+	}
+
+	small {
+		color: lighten($grey, 25%);
+		font-size: .7em;
+	}
+
+	.includes {
+		color: lighten($grey, 25%);
+		font-size: .75em;
+		text-align: left;
+	}
+
 	p {
 		color: $grey;
 		margin-top: 2em;
@@ -84,7 +126,7 @@ img {
 
 	ul {
 		@include nolist;
-		margin-top: 3em;
+		margin-top: 2em;
 	}
 
 	li {
