Trim down whitespace on top

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -28,6 +28,7 @@ h1, h2, h3 {
 
 h1 {
 	font-size: typescale(4);
+	margin: 0;
 	white-space: nowrap;
 }
 
@@ -46,6 +47,10 @@ p {
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+#title {
+	margin: 60px auto 40px;
 }
 
 #buy {
