Give main photo a "dropshadow"

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -71,6 +71,32 @@ img {
 	height: 257px;
 }
 
+#hero {
+	position: relative;
+
+	img {
+		border-bottom: 10px solid #ccc;
+		border-right: 10px solid #eee;
+		display: block;
+	}
+
+	&:before {
+		content: '';
+		@include triangle(10px, $white, down-left);
+		position: absolute;
+		bottom: 0;
+		left: 20px;
+	}
+
+	&:after {
+		content: '';
+		@include triangle(10px, $white, up-right);
+		position: absolute;
+		top: 0;
+		right: 10px;
+	}
+}
+
 #buy {
 	.button {
 		font-size: typescale(2);
