Remove logo options and set final logo

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -53,20 +53,10 @@ img {
 	margin: 60px auto 40px;
 }
 
-#logo1,
-#logo2 {
+#logo {
 	@include hide-text;
 	display: inline-block;
-}
-
-#logo1 {
-	background-image: url(../images/logo1.png);
-	width: 443px;
-	height: 160px;
-}
-
-#logo2 {
-	background-image: url(../images/logo2.png);
+	background-image: url(../images/logo.png);
 	width: 310px;
 	height: 257px;
 }
