Make slideshow max-width 900px

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -63,10 +63,9 @@ img {
 }
 
 #hero {
-	max-width: none;
+	max-width: 900px;
 	padding: 0;
 	position: relative;
-	width: 100%;
 
 	ul {
 		@include nolist;
