--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -52,7 +52,6 @@ img {
 
 #title {
 	background: #313133 url(../images/bg.black.jpg) center center;
-	box-shadow: 0 1px 4px rgba(0,0,0,.2);
 	margin: 0 auto;
 	max-width: none;
 	padding: 0;
@@ -63,6 +62,17 @@ img {
 	.wrap {
 		background: url(../images/bg.border.png) no-repeat center top;
 		padding: 40px 0;
+	}
+
+	&:after {
+		background: url(../images/bg.border.bottom.png) no-repeat center top;
+		content: '';
+		display: block;
+		width: 100%;
+		height: 39px;
+
+		position: absolute;
+		top: 100%;
 	}
 }
 
