--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -54,14 +54,20 @@ img {
 	background: #313133 url(../images/bg.black.jpg) center center;
 	margin: 0 auto;
 	max-width: none;
-	padding: 0;
+	padding: 40px 0;
 	position: relative;
 	width: 100%;
 	z-index: 2;
 
-	.wrap {
+	&:before {
 		background: url(../images/bg.border.png) no-repeat center top;
-		padding: 40px 0;
+		content: '';
+		display: block;
+		width: 100%;
+		height: 35px;
+
+		position: absolute;
+		top: 0;
 	}
 
 	&:after {
