--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -12,6 +12,6 @@
 @import "helpers/normalize";
 @import "helpers/fonts";
 
-@import "vendor/responsiveslides.css";
+@import "vendor/responsiveslides";
 
 @import "defaults";
